cms: update Contribute page "create-an-individual-item"

--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -135,7 +135,7 @@ A few recommendations are given [in the metadata guidelines (scroll down until "
 
 3. Name of an actor is mandatory: while creating an actor, you need at least to add a name.  Add ExternalID for actors: ORCID, recommended. Add ROR IDs for research organisation. Affiliations can also be added, but the choice is possible only among the current list of actors. So if you don’t find an affiliation, you need to create it as an actor as well.
 
-![Add actor external ID screenshot](/assets/cms/images/screenshot-2023-06-16-at-15.20.53.png)
+![Add actor external ID screenshot](/assets/cms/images/screenshot-2023-05-08-at-18.02.19.png)
 
 _Note on the actors’ roles_. For a given item, you can choose a role for an actor: contributor, author, reviewer, director, programmer, editor, provider, contact, funder, helpdesk. By default, the Actor’s role is contributor. 
 
@@ -166,13 +166,13 @@ The _terms of use_ field is a free text field, so you can add anything you want 
 
 Two different kinds of images can be added to a resource: media that appear in the middle of an item page and thumbnail (=logo) that are displayed on the top left corner of an item, just before the name of a resource.
 
-\[screenshot]
+![Positions of the two different images in the item detail view of an item](/assets/cms/images/images_mp.png)
 
 **Media** 
 
 Media can be images or videos. Clicking on “+ Add Media” will open a pop-up window, like shown in the screenshot below.  
 
-\[screenshot]
+![Screenshot of the media pop-up window](/assets/cms/images/screenshot-2023-06-16-at-15.36.36.png)
 
 Some recommendations to add images: 
 
@@ -183,8 +183,10 @@ Some recommendations to add images: 
 
 Some recommendations to add videos: 
 
-1. If on YouTube or Vimeo: just deliver the URL (title/caption of the video might be retrieved automatically). 
+1. If on YouTube or Vimeo: just deliver the URL provided in the embed sharing settings of the platform as shown in the Youtube screenshot below. 
 2. If elsewhere: provide link to video and descriptive caption. 
+
+![link to add to the MP highlighted in blue](/assets/cms/images/screenshot-2023-06-16-at-15.38.39.png)
 
 **Media-caption**: every media should include a descriptive caption, i.e verbose information mentioning license and credits about the media used.
 
@@ -205,9 +207,9 @@ You have several options of  how to specify the relation:
 - Mention (mentions / is mentioned in) - if the resource created is cited in another resource, this relation type can be chosen. Ex: a tool is mentioned in a publication. A publication mentions a tool.
 - Extension (extends / is extended by) - if the resource created is a direct extension of another, either because it develops it further or maybe because it adds to or prolongs another, this relation type can be chosen. Ex: a training material extends another from the same curricula, a service is extended by a new component (itself registered as service in the MP).  
 
-\[screenshot]
-
 Only registered entries of the MP can be chosen as related item: if you start typing the name of the item it will be suggested automatically in a list.
+
+![2 steps describing how to add related items](/assets/cms/images/screenshot-2023-06-16-at-15.44.35.png)
 
 **If you need some explanation or examples for some of the metadata fields, please consult the
 ["Guidance for metadata fields" table](/contribute/metadata-guidelines).**
