cms: update Contribute page "enrich-an-individual-item"

--- a/src/pages/contribute/enrich-an-individual-item.page.mdx
+++ b/src/pages/contribute/enrich-an-individual-item.page.mdx
@@ -1,17 +1,40 @@
 ---
 title: Enrich an individual item
-toc: false
 navigationMenu:
   title: Enrich an individual item
   position: 4
+toc: false
 ---
+We encourage members of our community to continue to update and enrich Marketplace entries, as digital tools, workflows, and datasets useful in social sciences and humanities are rapidly changing. We are relying on you to help us maintain this information as up to date as possible for the scholarly community. 
 
-If you find an existing Marketplace entry that you wish to enhance or correct, you can do so via the
-edit forms. To access this, log in to your Marketplace account and go to the item you wish to
-correct. Above the entry, in blue, you will find an "Edit" button, which will open up a page where
-you can fill in the information.
+If you find an existing Marketplace entry that you wish to enhance or correct, you can do so via the edit forms. It is very easy and straightforward to suggest editions to an item. Here is a 4 steps approach explaining you how to proceed!
+
+1. ## **Log in** 
+
+First, you need to sign in to the SSH Open Marketplace which should be possible very conveniently using already existing credentials (academic or social accounts are available). 
+
+![](/assets/cms/images/signin1.png)
+
+![](/assets/cms/images/signin2.png)
+
+2. ## **Go to the item you wish to correct**
+3. ## **Edit the entry**
+
+When clicking on the “Edit” button, you land on the edit form, where existing information are already filled in. You can modify/delete them and add new information too.
 
 ![Screenshot of the edit form - "3DHOP - How To" item](/assets/cms/images/edit_training.png)
+
+See “Fill in the form” step of the previous section for more details and guided examples. The full metadata guidelines are also available here. 
+
+You may save your edits as a draft, without making a final submission, by using the Save as Draft button. Once you have finished, click “Publish” and it will go to review for our moderation team. Via the “My account” dashboard, you can access your contributed and draft items. 
+
+4. #### **Submit your changes for moderation**
+
+What happens next? 
+
+Once you click on the  “suggest/submit” button, your item is sent to moderators (i.e a members of the Editorial Board) for review. Moderators will accept or reject your changes. In case of rejection or additional questions, a moderator will get in touch with you.
+
+Once accepted, a new version of the item you have contributed to is published on the SSH Open Marketplace. You and other contributors can still edit the entry following the same 4 steps as described here.
 
 If you need some explanation or examples for some of the metadata fields, please consult the
 ["Guidance for metadata fields" table](/contribute/metadata-guidelines#guidance-for-metadata-fields).
