--- a/src/pages/about/api-documentation.page.mdx
+++ b/src/pages/about/api-documentation.page.mdx
@@ -45,20 +45,21 @@ Because there is a limited  number of results per page, you can access the next 
 
 Testing different calls in the box below will allow you to look into the different API calls to retrieve Marketplace items by type.
 
-<ApiEndpoint title="Retrieve items by type" endpoint={{ key: 'item-list' }}>
-  <ApiParamSelect label="item-type">
-    <Item key={1}>/api/tools-services</Item>
-    <Item key={2}>/api/training-materials/</Item>
-    <Item key={3}>/api/datasets</Item>
-    <Item key={4}>/api/publications</Item>
-    <Item key={5}>/api/workflows/</Item>
-  </ApiParamSelect>
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+<ApiEndpoint title="Retrieve items by type" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamSelect label="Category" param="categories" placeholder="Category">
+      <Item key="tool-or-service">Tools or services</Item>
+      <Item key="training-material">Training materials</Item>
+      <Item key="dataset">Datasets</Item>
+      <Item key="publication">Publications</Item>
+      <Item key="workflow">Workflows</Item>
+    </ApiParamSelect>
+    <ApiParamSelect label="Page" param="page" placeholder="Page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 #### Items search
@@ -69,34 +70,35 @@ As a researcher in Digital Humanities interested in network analysis, you want t
 And you can try out other terms in the widget below.
 
 <ApiEndpoint title="Item search" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
-  <ApiParamTextField label="Search" param="q" placeholder="Search term" />
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamTextField label="Search" param="q" placeholder="Search term" />
+    <ApiParamSelect label="Page" param="page" placeholder="Page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 More parameters can be added to the query, you can for example choose the item type you want to concentrate on, by adding a category type. So if you only want to search for publications using "Gephi", you will use the following query: [https://marketplace-api.sshopencloud.eu/api/item-search?q=gephi&categories=publication](https://marketplace-api.sshopencloud.eu/api/item-search?q=gephi&categories=publication)
 
 
 <ApiEndpoint title="Item search & Item category" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
-  <ApiParamTextField label="Search" param="q" placeholder="Search term" />
-
-  <ApiParamSelect label="Category" param="categories">
-    <Item key={'tool-or-service'}>tool-or-service</Item>
-    <Item key={'training-material'}>training-material</Item>
-    <Item key={'dataset'}>dataset</Item>
-    <Item key={'publication'}>publication</Item>
-    <Item key={'workflow'}>workflow</Item>
-  </ApiParamSelect>
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamTextField label="Search" param="q" placeholder="Search term" />
+    <ApiParamSelect label="Category" param="categories" placeholder="Category">
+      <Item key="tool-or-service">Tools or services</Item>
+      <Item key="training-material">Training materials</Item>
+      <Item key="dataset">Datasets</Item>
+      <Item key="publication">Publications</Item>
+      <Item key="workflow">Workflows</Item>
+    </ApiParamSelect>
+    <ApiParamSelect label="Page" param="page" placeholder="Page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 More specific searches can also be undertaken using some of the parameters of this API call.
@@ -104,21 +106,18 @@ More specific searches can also be undertaken using some of the parameters of th
 As an open science officer, you are interested in retrieving all the items in the Marketplace using open licenses. An initial call can give you the list of items using the license field (i.e. for which the license field is not empty): [https://marketplace-api.sshopencloud.eu/api/item-search?d.license=%5B\*%20TO%20\*%5D](https://marketplace-api.sshopencloud.eu/api/item-search?d.license=%5B*%20TO%20*%5D) Then, instead of looking for all licenses referenced, you want to restrict the search to items using the [Creative Commons Attribution 4.0 International](http://spdx.org/licenses/CC-BY-4.0) license and this call can help you: [https://marketplace-api.sshopencloud.eu/api/item-search?d.license=%22Creative%20Commons%20Attribution%204.0%20International%22](https://marketplace-api.sshopencloud.eu/api/item-search?d.license=%22Creative%20Commons%20Attribution%204.0%20International%22)
 
 <ApiEndpoint title="Item search on specific fields" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
-  <ApiParamTextField label="Source" param="d.source" placeholder="Search term" />
-
-  <ApiParamTextField label="Contributor" param="d.contributor" placeholder="Search term" />
-
-  <ApiParamTextField label="License" param="d.license" placeholder="Search term" />
-
-  <ApiParamTextField label="Journal" param="d.journal" placeholder="Search term" />
-
-  <ApiParamTextField label="Resource category" param="d.resource-category" placeholder="Search term" />
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamTextField label="Source" param="d.source" placeholder="Search term" />
+    <ApiParamTextField label="Contributor" param="d.contributor" placeholder="Search term" />
+    <ApiParamTextField label="License" param="d.license" placeholder="Search term" />
+    <ApiParamTextField label="Journal" param="d.journal" placeholder="Search term" />
+    <ApiParamTextField label="Resource category" param="d.resource-category" placeholder="Search term" />
+    <ApiParamSelect label="Page" param="page" placeholder="page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 A complementary parameter allows users to search among faceted fields such as activity, keyword or language.
@@ -126,17 +125,16 @@ A complementary parameter allows users to search among faceted fields such as ac
 As a DARIAH officer, you are interested in retrieving all the items tagged as "DARIAH national resource". This tag is a keyword in the SSH Open Marketplace and the following call will give you the results you're looking for [https://marketplace-api.sshopencloud.eu/api/item-search?f.keyword=DARIAH%20National%20Resource](https://marketplace-api.sshopencloud.eu/api/item-search?f.keyword=DARIAH%20National%20Resource)
 
 <ApiEndpoint title="Item search on faceted fields" endpoint={{ key: 'item-search', pathname: '/api/item-search' }}>
-  <ApiParamTextField label="Activity" param="f.activity" placeholder="Search term" />
-
-  <ApiParamTextField label="Keyword" param="f.keyword" placeholder="Search term" />
-
-  <ApiParamTextField label="Language" param="f.language" placeholder="Search term" />
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamTextField label="Activity" param="f.activity" placeholder="Search term" />
+    <ApiParamTextField label="Keyword" param="f.keyword" placeholder="Search term" />
+    <ApiParamTextField label="Language" param="f.language" placeholder="Search term" />
+    <ApiParamSelect label="Page" param="page" placeholder="page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 Note that it is also possible to mix the `d` and `f` parameters in one query, such as for example: [https://marketplace-api.sshopencloud.eu/api/item-search?d.resource-category=%22Repository%22&f.keyword=DARIAH%20National%20Resource](https://marketplace-api.sshopencloud.eu/api/item-search?d.resource-category=%22Repository%22&f.keyword=DARIAH%20National%20Resource)
@@ -146,13 +144,14 @@ Note that it is also possible to mix the `d` and `f` parameters in one query, su
 As a researcher in Palaeography, you are interested in digital resources and methods associated with your discipline. A standard item search via [https://marketplace-api.sshopencloud.eu/api/item-search?q=Palaeography](https://marketplace-api.sshopencloud.eu/api/item-search?q=Palaeography) would give you some results, but you want to understand if some items are specifically tagged as Palaegraphic resources. Thanks to the concept search API call allowing the exploration of all the concept used in the [13 controlled vocabularies](https://marketplace.sshopencloud.eu/contribute/metadata-guidelines#vocabularies) of the SSH Open Marketplace, you can first understand that "Palaeography" is an existing concept in the discipline vocabulary of the Marketplace: [https://marketplace-api.sshopencloud.eu/api/concept-search?q=Palaeography](https://marketplace-api.sshopencloud.eu/api/concept-search?q=Palaeography)
 
 <ApiEndpoint title="Concept search among the SSH Open marketplace vocabularies" endpoint={{ key: 'concept-search', pathname: '/api/concept-search' }}>
-  <ApiParamTextField label="Search" param="Search concept" placeholder="q" />
-
-  <ApiParamSelect label="Page" param="page">
-    <Item key={1}>Page 1</Item>
-    <Item key={2}>Page 2</Item>
-    <Item key={3}>Page 3</Item>
-  </ApiParamSelect>
+  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: 16 }}>
+    <ApiParamTextField label="Search" param="q" placeholder="Search concept" />
+    <ApiParamSelect label="Page" param="page" placeholder="Page">
+      <Item key={1}>Page 1</Item>
+      <Item key={2}>Page 2</Item>
+      <Item key={3}>Page 3</Item>
+    </ApiParamSelect>
+  </div>
 </ApiEndpoint>
 
 Using then the advanced item search query [https://marketplace-api.sshopencloud.eu/api/item-search?d.discipline=Palaeography](https://marketplace-api.sshopencloud.eu/api/item-search?d.discipline=Palaeography) you understand that no items is tagged yet with the Palaeography discipline concept and you decide to tag your favorite resources - IIIF Universal Viewer; Kraken and Transkribus - with your discipline, following the ["enrich an item" guidelines](https://marketplace.sshopencloud.eu/contribute/enrich-an-individual-item) or via the API, see Managing items section below.
@@ -210,9 +209,7 @@ This `POST api/tools-services` needs to be sent with a JSON as input including a
 
 <details>
 
-<summary>
-**Result**: New item stored in the database with the status `SUGGESTED`.
-</summary>
+<summary>**Result**: New item stored in the database with the status `SUGGESTED`.</summary>
 
 ```json
 {
@@ -256,9 +253,7 @@ Step 3: PUT api/training-materials/ejzW3x . The contributor pastes in the body t
 
 <details>
 
-<summary>
-**Result**: New version of an existing item stored in the database with the status `SUGGESTED`.
-</summary>
+<summary>**Result**: New version of an existing item stored in the database with the status `SUGGESTED`.</summary>
 
 ```json
 {
