cms: update About page "data-population"

--- a/src/pages/about/data-population.page.mdx
+++ b/src/pages/about/data-population.page.mdx
@@ -101,7 +101,7 @@ Here is a list of four questions to ask before adding a resource on the SSH Open
 
 
 
-1. **Contextualization** is one of the key pillars of the SSH Open Marketplace. It is meant to provide a discovery portal for tools and services, while placing these tools and services in context via publications, training materials, datasets, and workflows. As such, these last four categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with tools and services, and if no relation to a tool or service exists, they should not be accepted. 
+1. **Contextualization** is one of the [key pillars of the SSH Open Marketplace](/about/sshoc-eosc#three-pillars-for-the-development-and-functioning-of-the-ssh-open-marketplace). It is meant to provide a discovery portal for tools and services, while placing these tools and services in context via publications, training materials, datasets, and workflows. As such, these last four categories are indexed in the SSH Open Marketplace insofar as they can be placed in relation with tools and services, and if no relation to a tool or service exists, they should not be accepted. 
 2. **Curation** is, alongside contextualization, a key pillar of the SSH Open Marketplace. We believe that accurate and up-to-date content is key to making the SSH Open Marketplace a rich and useful discovery portal. As such, data population and curation are at the heart of our work. Once (meta)data have been ingested in the Marketplace, we curate and enrich them thanks to a hybrid approach: automated checks are run on the ingested data, followed by manual review of the identified problems as well as of aspects that cannot be checked automatically. In this process, contributors and moderators are playing an essential role (See “How to contribute”). 
 3. **Quality of the (meta)data**: higher quality data will increase the quality of the Marketplace. This means that the more of the metadata fields in the Marketplace data model are covered by an item, the better (items with just a title and a link are inferior to ones containing a long description and maybe even a list of contributors) and the more good quality metadata in your item or source, the higher the overall quality of the item or source. _Note_: currently, most publications lack metadata. This is a temporary situation, which is due to the fact that they were automatically ingested with the purpose to automatically identify relations with the other types of resources included in the SSH Open Marketplace. 
 4. **Focus on primary sources:** in the Marketplace, we give priority to primary sources and exclude sources that only aggregate information that can be found elsewhere. Such “2nd hand metadata” introduces additional points of failure and using the primary source instead will likely result in higher quality metadata.
