cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -17,7 +17,12 @@ The SSH Open Marketplace was created with funding from the [SSHOC project](/abou
 
 </div>
 
-Two institutions act as service providers on behalf of these ERICs: the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service, and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as hosting and maintenance for the service.
+Two institutions act as service providers on behalf of these ERICs: 
+
+- the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service. Especially, Matej Ďurčo coordinates efforts from the ACDH-CH team where Stefan Probst acts as front-end developer and Dalibor Pančić takes care of the Marketplace deployment.  
+- and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as maintenance for the service. Tomasz Parkoła and Aleksandra Nowak are particularly involved, respectively in the maintenance of the back-end code and as lead developer of the DACE ingestion pipeline [see ingest workflow](/about/implementation#data-ingestion-workflow).
+
+
 
 ## Editorial team
 
