chore: update oeaw imprint

--- a/src/components/privacy-policy/PrivacyPolicy.mdx
+++ b/src/components/privacy-policy/PrivacyPolicy.mdx
@@ -64,12 +64,13 @@ member of the SSHOC partner [DARIAH-EU](https://www.dariah.eu/).
 
 #### Signing power
 
-President: Univ.-Prof. Dr. Anton Zeilinger
+President: Univ.-Prof. Dr. phil. Heinz Faßmann
 
-Vice president: Univ.-Doz. Dr. phil. Michael Alram
+Vice President: Univ.-Prof. DI Dr. techn. Ulrike Diebold
 
-Class presidents: Univ.-Prof. Dr. phil. Oliver Jens Schmitt, Univ.-Prof. Dipl.-Ing. Dr. techn. Georg
-Brasseur
+Class President: Univ.-Prof. Dr. iur. Christiane Wendehorst LL.M. (CANTAB.)
+
+Class President: Prof. Dr. Wolfgang Baumjohann
 
 Supervisory body: Academy council. For more information, please visit
 [https://www.oeaw.ac.at/en/oeaw/bodies/academy-council/](https://www.oeaw.ac.at/en/oeaw/bodies/academy-council/).
