--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -24,16 +24,12 @@ questions.
 
   For the sake of simplicity the SSH Open Marketplace comes (for the moment) only with an English user interface. Furthermore, the majority of the records are in English. However, the Editorial Board  encourages the addition of records about resources in other European languages. For a better search experience, we recommend the following when creating a record about a non-English resource:
 
-  * The **name** of the entry (label) should be in English. If the English name of the resource does not exist or if it does not make sense to translate it, we recommend you include a description of the resource (in English) in the title (e.g. Portal xx, Corpus xx). Do not translate project’s name or alike that are only making sense in their original language or context.
-
-  * The **description** can be in another language than English but If you want your resource to be discovered by users with all language backgrounds, we recommend that you add at least a short English description.
-
-  * Specify the language(s) of your resource in the dedicated ‘language’ metadata field.
-
-  * Use English keywords.
+  - The **name** of the entry (label) should be in English. If the English name of the resource does not exist or if it does not make sense to translate it, we recommend you include a description of the resource (in English) in the title (e.g. Portal xx, Corpus xx). Do not translate project’s name or alike that are only making sense in their original language or context.
+  - The **description** can be in another language than English but If you want your resource to be discovered by users with all language backgrounds, we recommend that you add at least a short English description.
+  - Specify the language(s) of your resource in the dedicated ‘language’ metadata field.
+  - Use English keywords.
 
 Some examples of records describing non English resources: [The Academic Encyclopedia of Czech History](/tool-or-service/foCkv4); [Portal Znameniti.hr](/tool-or-service/2tO2SM) 
-
 
 ## Using and contributing to the SSH Open Marketplace
 
@@ -56,6 +52,17 @@ Some examples of records describing non English resources: [The Academic Encyclo
 - **How can I log in?**
 
   You may log into the SSH Open Marketplace because you want to suggest changes or corrections for a certain record. Or you may want to create an entirely new record. All of this is being done in the Edit Form of the SSH Open Marketplace. You can reach the Edit Form via the Log in function in the top right corner of the SSH Open Marketplace. You may use already available credentials like a Google or DARIAH account or your institutional ID. The SSH Open Marketplace is part of the EOSC AAI, which allows for a very convenient user authentication. See also the [“Create an individual item” tutorial on this page](/contribute/create-an-individual-item).
+- **I am encountering an error when trying to log in. What can I do?**
+  Unfortunately some identity providers do not make the user’s e-mail available when logging in to the SSH Open Marketplace. In this case you will get the error “your identity provider needs to release all of the following user attributes: mail”. 
+
+  ![Screenshot of the EOSC AAI error login page](/assets/cms/images/eosc_aai_login_error.png "Screenshot of the EOSC AAI error login page")
+
+  \
+  If you cannot convince your university to release this information, another workaround is to use a different identity to log in. You can use your ORCID, but only if you have confirmed your e-mail address and did not set it to “trusted parties” or “everyone”.
+
+  ![Screenshot of the ORCID email visibility settings](/assets/cms/images/orcid_email_settings.png "Screenshot of the ORCID email visibility settings")
+
+  If you have no other option, you could [apply for a CLARIN account](https://user.clarin.eu/user/register).
 - **I represent a certain community or infrastructure initiative. Is the SSH Open Marketplace open for us?**
 
   Yes, it is! The SSH Open Marketplace currently aggregates its content from a range of trusted sources like Programming Historian, the CLARIN Resource Families or DARIAH-Campus to name only three. Additionally, the SSH Open Marketplace cooperates with communities and infrastructure initiatives such as DARIAH-EU, CESSDA or CLARIN. If you think, the resources, methods and services of your community or initiative would fit into the SSH Open Marketplace, reach out to the Editorial Board. We are happy to discuss the options for individual cooperation with you.
@@ -79,4 +86,4 @@ Some examples of records describing non English resources: [The Academic Encyclo
   existing research practices and this includes commercial software. We are not affiliated to or
   receiving any revenues from the commercial software referenced in this website.
 - **What is the preferred granularity for resources showcased (i.e. if a training material is part of a five-chapter lesson, which entry/pointer should be used to record this resource on the SSH Open Marketplace)?** 
-There are no strict rules, so it is up to you to decide what you think would be the most relevant for a newcomer to your resource. It also depends on how much time you can spend on creating the entry/entries in the SSH Open Marketplace. As you can see in the [“create an individual entry” tutorial](/contribute/create-an-individual-item), each record should come with as much detail as is useful for the user. 
+  There are no strict rules, so it is up to you to decide what you think would be the most relevant for a newcomer to your resource. It also depends on how much time you can spend on creating the entry/entries in the SSH Open Marketplace. As you can see in the [“create an individual entry” tutorial](/contribute/create-an-individual-item), each record should come with as much detail as is useful for the user.
