--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -60,7 +60,7 @@ Some examples of records describing non English resources: [The Academic Encyclo
   \
   If you cannot convince your university to release this information, another workaround is to use a different identity to log in. You can use your ORCID, but only if you have confirmed your e-mail address and did not set it to “trusted parties” or “everyone”.
 
-  ![Screenshot of the ORCID email visibility settings](/assets/cms/images/orcid_email_settings.png "Screenshot of the ORCID email visibility settings")
+  ![Screenshot of the ORCID email visibility settings](/assets/cms/images/screenshot-2024-03-12-at-10.18.26.png "Screenshot of the ORCID email visibility settings")
 
   If you have no other option, you could [apply for a CLARIN account](https://user.clarin.eu/user/register).
 - **I represent a certain community or infrastructure initiative. Is the SSH Open Marketplace open for us?**
