cms: update About page "frequently-asked-questions"

--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -58,7 +58,7 @@ Some examples of records describing non English resources: [The Academic Encyclo
   ![Screenshot of the EOSC AAI error login page](/assets/cms/images/eosc_aai_login_error.png "Screenshot of the EOSC AAI error login page")
 
   \
-  If you cannot convince your university to release this information, another workaround is to use a different identity to log in. You can use your ORCID, but only if you have confirmed your e-mail address and set it to “trusted parties” or “everyone”.
+  If you cannot convince your university to release this information, another workaround is to use a different identity to log in. You can use your ORCID, but only if you have confirmed your e-mail address and set it to either “trusted parties” or “everyone”.
 
   ![Screenshot of the ORCID email visibility settings](/assets/cms/images/screenshot-2024-03-12-at-10.30.12.png "Screenshot of the ORCID email visibility settings")
 
