cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -22,15 +22,14 @@ Two institutions act as service providers on behalf of these ERICs:
 - the [Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)](https://www.oeaw.ac.at/acdh/) of the Austrian Academy of Sciences providing hosting and maintenance for the service. Especially, Matej Ďurčo coordinates efforts from the ACDH-CH team where Stefan Probst acts as front-end developer and Dalibor Pančić takes care of the Marketplace deployment.  
 - and the P[oznan Supercomputing and Networking Center (PSNC)](https://www.psnc.pl/) affiliated to the Institute of Bioorganic Chemistry of the Polish Academy of Sciences providing the data ingestion pipeline as well as maintenance for the service. Tomasz Parkoła and Aleksandra Nowak are particularly involved, respectively in the maintenance of the back-end code and as lead developer of the DACE ingestion pipeline [see ingest workflow](/about/implementation#data-ingestion-workflow).
 
-
-
 ## Editorial team
 
 An **Editorial Team** ensures the day-to-day maintenance and the data quality of the SSH Open Marketplace. The Editorial Team, liaising with the service providers and the end-users of the service (SSH researchers and support staff for researchers) ensures the technical running of operation, the effectiveness of the curation process and the editorial policy's successful implementation.
 
-Since the 1st of May 2022, 8 members have been appointed by the Governing Board. They were joined, in September 2022, by 9 volunteers. 
+The Editorial Team is composed of the following members (8 members appointed by the Governing Board and volunteers who joined the team after a call launched mid-2022): 
 
-- Laure Barbot - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU)
+- Canan Arıkan-Caba - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
+- Laure Barbot - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU) - Editorial Team coordinator
 - Elena Battaner Moro - Universidad Rey Juan Carlos in Madrid
 - Stefan Buddenbohm - Göttingen State and University Library
 - Cesare Concordia - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
@@ -38,8 +37,6 @@ Since the 1st of May 2022, 8 members have been appointed by the Governing Board.
 - Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU) 
 - Cristina Grisot - University of Zurich & Swiss National Center for Data & Services for the Humanities (DaSCH)
 - Klaus Illmayer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH) 
-- Taina Jääskeläinen - CESSDA & Finnish Social Science Data Archive (FSD), Tampere University
-- Martin Kirnbauer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH)
 - Alexander König - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
 - Michael Kurzmeier - University College Cork
 - Barbara McGillivray - King's College London
@@ -48,7 +45,7 @@ Since the 1st of May 2022, 8 members have been appointed by the Governing Board.
 - Magdalena Wnuk - Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre
 - Irena Vipavc Brvar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
 
-Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD)
+Former members of the Editorial Board: Mari Kleemola (CESSDA/FSD), Taina Jääskeläinen (CESSDA/FSD), Martin Kirnbauer (ACDH-CH)
 
 Please use the [contact form](/contact) if you want to get in touch.
 
