cms: update Contribute page "create-an-individual-item"

--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -11,9 +11,33 @@ Adding items to the SSH Open Marketplace is an easy process. Here are the **5 st
 
 First, you need to sign in to the SSH Open Marketplace which should be possible very conveniently using already existing credentials (academic or social accounts are available). 
 
-![Sign in the SSH Open Marketplace steps 1 and 2](/assets/cms/images/signin1.png)
+![Sign in the SSH Open Marketplace steps 1 and 2](/assets/cms/images/sign-in-mai-1-2.png)
 
-![Sign in the SSH Open Marketplace step 3](/assets/cms/images/signin2.png)
+![Sign in the SSH Open Marketplace step 3](/assets/cms/images/sign-in-mai-3.png)
+
+
+
+**If it is your first log in** to the Marketplace, you will have to undergo several validation steps before being logged in. This is normal. 
+
+You need to accept the Usage Policies, as shown in the two screens below:
+
+![screenshot of myaccessID - 1](/assets/cms/images/myaccess_1.png "Joining the SSHOC Marketplace group on MyAccessID")
+
+![screenshot of myaccessID - 2](/assets/cms/images/myaccess_2.png "Approving the terms of use")
+
+
+
+Your account is now successfully connected to the Marketplace, and you can go back to the [sign in page of the SSH Open Marketplace](https://marketplace.sshopencloud.eu/auth/sign-in).
+
+![screenshot of myaccessID - 3](/assets/cms/images/myaccess_3.png "Successful membership to MyAccessID")
+
+
+
+**Warning**: you need to explicitly go back to the [SSH Open Marketplace sign in page](https://marketplace.sshopencloud.eu/auth/sign-in) and click again on “Login with MyAccessID” to finalise your registration.
+
+If you encounter any problem with logging in, or do not find your history of contributed items in your account, please get in touch with the team using the contact form or directly via <sshopenmarketplace@sshopencloud.eu>.
+
+
 
 ## 2. Reflect on our inclusion criteria
 
