cms: update Contribute page "create-an-individual-item"

--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -35,7 +35,7 @@ Your account is now successfully connected to the Marketplace, and you can go ba
 
 **Warning**: you need to explicitly go back to the [SSH Open Marketplace sign in page](https://marketplace.sshopencloud.eu/auth/sign-in) and click again on “Login with MyAccessID” to finalise your registration.
 
-If you encounter any problem with logging in, or do not find your history of contributed items in your account, please get in touch with the team using the contact form or directly via <sshopenmarketplace@sshopencloud.eu>.
+If you encounter any problem with logging in, or do not find your history of contributed items in your account, please get in touch with the team using the contact form or directly via \[sshopenmarketplace@sshopencloud.eu](sshopenmarketplace@sshopencloud.eu).
 
 
 
