cms: update Contribute page "create-an-individual-item"

--- a/src/pages/contribute/create-an-individual-item.page.mdx
+++ b/src/pages/contribute/create-an-individual-item.page.mdx
@@ -15,8 +15,6 @@ First, you need to sign in to the SSH Open Marketplace which should be possible 
 
 ![Sign in the SSH Open Marketplace step 3](/assets/cms/images/sign-in-mai-3.png)
 
-
-
 **If it is your first log in** to the Marketplace, you will have to undergo several validation steps before being logged in. This is normal. 
 
 You need to accept the Usage Policies, as shown in the two screens below:
@@ -25,19 +23,13 @@ You need to accept the Usage Policies, as shown in the two screens below:
 
 ![screenshot of myaccessID - 2](/assets/cms/images/myaccess_2.png "Approving the terms of use")
 
-
-
 Your account is now successfully connected to the Marketplace, and you can go back to the [sign in page of the SSH Open Marketplace](https://marketplace.sshopencloud.eu/auth/sign-in).
 
 ![screenshot of myaccessID - 3](/assets/cms/images/myaccess_3.png "Successful membership to MyAccessID")
 
 
 
-**Warning**: you need to explicitly go back to the [SSH Open Marketplace sign in page](https://marketplace.sshopencloud.eu/auth/sign-in) and click again on “Login with MyAccessID” to finalise your registration.
-
-If you encounter any problem with logging in, or do not find your history of contributed items in your account, please get in touch with the team using the contact form or directly via \[sshopenmarketplace@sshopencloud.eu](sshopenmarketplace@sshopencloud.eu).
-
-
+If you encounter any problem with logging in, or do not find your history of contributed items in your account, please get in touch with the team using the \[contact form](/contact) or directly via [sshopenmarketplace@sshopencloud.eu](sshopenmarketplace@sshopencloud.eu).
 
 ## 2. Reflect on our inclusion criteria
 
