--- a/src/pages/about/frequently-asked-questions.page.mdx
+++ b/src/pages/about/frequently-asked-questions.page.mdx
@@ -22,10 +22,10 @@ questions.
   The SSH Open Marketplace serves as an aggregator for third party resources. It offers detailed information on SSH relevant resources and access to them. The SSH Open Marketplace does not provide these resources, it guides its users to them. See the description of the service in the [“What is the SSH Open Marketplace” page](/about/service).
 - **Is the SSH Open Marketplace multilingual?**
 
-  For the sake of simplicity the SSH Open Marketplace comes (for the moment) only with an English user interface. Furthermore, the majority of the records are in English. However, the Editorial Board  encourages the addition of records about resources in other European languages. For a better search experience, we recommend the following when creating a record about a non-English resource:
+  For the sake of simplicity the SSH Open Marketplace comes only with an English user interface. Furthermore, the majority of the records are in English. The Editorial Board  encourages the addition of records about resources in other European languages, but search functionalities do not support multilingualism. For a better search experience, we recommend the following when creating a record about a non-English resource:
 
   - The **name** of the entry (label) should be in English. If the English name of the resource does not exist or if it does not make sense to translate it, we recommend you include a description of the resource (in English) in the title (e.g. Portal xx, Corpus xx). Do not translate project’s name or alike that are only making sense in their original language or context.
-  - The **description** can be in another language than English but If you want your resource to be discovered by users with all language backgrounds, we recommend that you add at least a short English description.
+  - The **description** should be in English. Another language than English can also be used in this description field but If you want your resource to be discovered by users with all language backgrounds, you should add at least a short English description.
   - Specify the language(s) of your resource in the dedicated ‘language’ metadata field.
   - Use English keywords.
 
