cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -46,7 +46,7 @@ Laure Barbot is officer for service development and integration at the Digital R
 
 [Stefan Buddenbohm](https://www.sub.uni-goettingen.de/kontakt/personen-a-z/personendetails/person/stefan-buddenbohm-1/) works as project manager in the Research and Development Department at the Göttingen State and University Library, in Germany. Already involved in the development of the SSH Open Marketplace via the SSHOC project, Stefan joins the Editorial Team with an interest to enhance the uptake and awareness of the SSH Open Marketplace in the German research community. Stefan builds the bridge to the German NFDI - the National Research Data Infrastructure - a joint effort of up to 30 disciplinary consortia. Currently he’s coordinating the task area Infrastructure/Operations of  Text+, the NFDI research data infrastructure for text- and language based research data.
 
-![Cesare Concordia]()
+<div/>
 
 Cesare Concordia - Institute of Information Science and Technologies "Alessandro Faedo" (CNR-ISTI)
 
@@ -54,7 +54,7 @@ Cesare Concordia - Institute of Information Science and Technologies "Alessandro
 
 [Maja Dolinar](https://orcid.org/0000-0002-8307-6486) is Head of Digital Preservation at the Slovenian Social Science Data Archives at the University of Ljubljana, in Slovenia. Maja has an extensive expertise in quality evaluation of resources and an everyday experience in metadata and managing social science research data. Motivated to share her experiences, learn from other members of the Board and contribute to improving and disseminating the SSH Open Marketplace resources, Maja will also pay particular attention to the early career researchers’ needs towards the service.
 
-![Edward Gray]()
+<div/>
 
 Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIAH-EU) 
 
@@ -65,11 +65,11 @@ Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIA
 ORCID [0000-0003-0684-4442](https://orcid.org/0000-0003-0684-4442) 
 [LinkedIn](https://www.linkedin.com/in/cristinagrisot/) 
 
-![Klaus Illmayer]()
+<div/>
 
 Klaus Illmayer - Austrian Centre for Digital Humanities and Cultural Heritage (ACDH-CH) 
 
-![Alexander König]()
+<div/>
 
 Alexander König - Common Language Resources and Technology Infrastructure (CLARIN ERIC)
 
@@ -94,7 +94,7 @@ At the ACDH-CH, Michael is part of the research unit [DH Research & Infrastructu
 
 [Magdalena Wnuk](https://orcid.org/0000-0003-4129-6664) is Open Science Specialist at The Institute of Literary Research of the Polish Academy of Sciences, Digital Humanities Centre. She is also coordinating the Polish national node for the OPERAS infrastructure.  By joining the SSH Open Marketplace Editorial Board, Magdalena would like to continue communicating the available tools among various audiences as well as contributing to metadata quality improvement in social sciences and humanities.
 
-![Irena Vipavc Brvar]()
+<div/>
 
 Irena Vipavc Brvar - CESSDA & Slovenian Social Science Data Archives (ADP), University of Ljubljana
 
