cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -60,10 +60,10 @@ Edward Gray - Digital Research Infrastructure for the Arts and Humanities (DARIA
 
 ![Cristina Grisot](/assets/cms/images/sshoc_ed_board_cristinagrisot.jpg)
 
-[Cristina Grisot](https://cristinagrisot.com/) is a researcher in Language Sciences and Project Manager, and she currently works as national coordinator of the Swiss nodes of CLARIN and DARIAH at the University of Zurich and at the Swiss National Center for Data & Services for the Humanities DaSCH. As a member of the SSHOM EB, Cristina is interested in contributing to the (meta)data quality of humanities and language-related resources, creation of workflows, as well as dissemination and community building around the SSH Open Marketplace.
+<div>[Cristina Grisot](https://cristinagrisot.com/) is a researcher in Language Sciences and Project Manager, and she currently works as national coordinator of the Swiss nodes of CLARIN and DARIAH at the University of Zurich and at the Swiss National Center for Data & Services for the Humanities DaSCH. As a member of the SSHOM EB, Cristina is interested in contributing to the (meta)data quality of humanities and language-related resources, creation of workflows, as well as dissemination and community building around the SSH Open Marketplace.
 
 ORCID [0000-0003-0684-4442](https://orcid.org/0000-0003-0684-4442) 
-[LinkedIn](https://www.linkedin.com/in/cristinagrisot/) 
+[LinkedIn](https://www.linkedin.com/in/cristinagrisot/)</div> 
 
 <div/>
 
