cms: update About page "team"

--- a/src/pages/about/team.page.mdx
+++ b/src/pages/about/team.page.mdx
@@ -77,7 +77,7 @@ At the ACDH-CH, Michael is part of the research unit [DH Research & Infrastructu
 
 ![Barbara McGillivray](/assets/cms/images/sshoc_ed_board_barbara_mcgillivray.png)
 
-[Barbara McGillivray](https://www.turing.ac.uk/people/researchers/barbara-mcgillivray) is Lecturer Digital Humanities and Cultural Computation at the Department of Digital Humanities of King's College London, Turing Research Fellow at The Alan Turing Institute and Editor-in-chief of the [Journal of Open Humanities Data (JOHD)](https://openhumanitiesdata.metajnl.com/). Barbara is bringing her expertise in interdisciplinary research at the intersection between humanities and computational sciences, with a particular focus on language data to the SSH Open Marketplace. And great synergies between the Journal of Open Humanities Data and the SSH Open Marketplace will also be on the agenda!
+Barbara McGillivray is Lecturer Digital Humanities and Cultural Computation at the Department of Digital Humanities of King's College London and Editor-in-chief of the [Journal of Open Humanities Data (JOHD)](https://openhumanitiesdata.metajnl.com/). Barbara is bringing her expertise in interdisciplinary research at the intersection between humanities and computational sciences, with a particular focus on language data to the SSH Open Marketplace. And great synergies between the Journal of Open Humanities Data and the SSH Open Marketplace will also be on the agenda! [ORCID profile](https://orcid.org/0000-0003-3426-8200)
 
 ![Clara Parente Boavida](/assets/cms/images/sshoc_ed_board_claraboavida.jpg)
 
