cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -3,5 +3,41 @@ title: User stories
 navigationMenu:
   title: User stories
   position: 9
+toc: true
 ---
-User stories
+# SSH Open Marketplace Stories
+
+
+
+The SSH Open Marketplace (SSHOMP) provides a valuable service to both researchers and infrastructure operators. It can be used in a variety of contexts, just as its users have different training backgrounds, requirements and approaches to incorporating SSHOMP into their work. On this page we present real use cases and the faces behind them.
+
+These use cases shall inspire you to think of own scenarios applying the SSHOMP reaching beyond its use as a resource sharing platform. Please get in touch with us if you have an use case in mind for the SSHOMP contributing to your research work or to your community. Let’s discuss how we could make it work.
+
+## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
+
+
+
+![## Lukas Weimer](/assets/cms/images/1.png)
+
+
+
+### WHO?
+
+Lukas Weimer is a German philologist with a strong background in the humanities. His journey into digital methods began during his studies at the University of Würzburg, where he worked as a student assistant at the [Chair of Computer Philology](https://www.caidas.uni-wuerzburg.de/research-groups/computer-philology/), a hub for Digital Humanities. Despite his initial lack of formal training in digital methods, Lukas embraced the field, learning on the job and eventually completing his PhD. Today, he contributes to research infrastructure development through his role at the Göttingen State and University Library, focusing on projects like [DARIAH-DE](https://de.dariah.eu/), [Text+](https://text-plus.org/), and [Base4NFDI](https://base4nfdi.de/). His experience in the field is complemented by his perspective as a researcher and infrastructure provider.
+
+### THE CASE
+
+Lukas utilizes the SSH Open Marketplace as part of his work with the [Association for Research Infrastructures in the Humanities and Cultural Studies](http://forschungsinfrastrukturen.de/doku.php/start). The Marketplace serves as a centralized platform for listing and managing tools, services, and resources contributed by the association’s members. By leveraging the Marketplace’s API, the association can automate the [integration of its resources into its website](http://forschungsinfrastrukturen.de/doku.php/angebotskatalog), eliminating the need for manual updates. This functionality not only saves time but also ensures accuracy and accessibility.
+
+The Marketplace’s curation process, overseen by its editorial board, guarantees the quality and reliability of listed resources. Its distributed model allows each institution to manage and update its own entries, making it a flexible and efficient solution. For researchers, the Marketplace offers a wealth of tools and services, enabling them to find resources tailored to their needs. Lukas highlights the dual benefit: it simplifies administrative processes while supporting researchers in addressing diverse academic questions.
+
+![SSHOMP interface showing GKFI e.V. entries](/assets/cms/images/2.png)
+
+### OUTLOOK
+
+Lukas sees the SSH Open Marketplace as a valuable tool for both infrastructure providers and researchers. However, he identifies areas for improvement that could enhance its usability and impact:
+
+- Adding clear indicators for when an entry was last updated to improve transparency.
+- Implementing a feedback loop to notify contributors about the status of their entries (e.g., approval or rejection).
+
+These enhancements could further streamline workflows and improve user satisfaction. Lukas emphasizes the Marketplace’s potential to unify diverse institutions and their offerings, fostering collaboration and maximizing outreach. With continuous improvements, the SSH Open Marketplace can solidify its role as an indispensable resource for the research community.
