cms: update About page "user-stories"

--- a/src/pages/about/user-stories.page.mdx
+++ b/src/pages/about/user-stories.page.mdx
@@ -13,7 +13,7 @@ These use cases shall inspire you to think of own scenarios applying the SSHOMP 
 
 ## Lukas Weimer and the Use Case of the Association for Research Infrastructures in the Humanities and Cultural Studies: Managing own Tools and Resources using the Marketplace API
 
-![## Lukas Weimer](/assets/cms/images/1.png)
+![## Lukas Weimer](/assets/cms/images/1.png){width=250}
 
 ### WHO?
 
